--- a/SWAGLibrary/Base.lproj/Main.storyboard
+++ b/SWAGLibrary/Base.lproj/Main.storyboard
@@ -36,29 +36,42 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="115"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nE1-gE-mBB">
-                                                    <rect key="frame" x="35" y="15" width="304" height="83"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nE1-gE-mBB">
+                                                    <rect key="frame" x="18.5" y="11.5" width="337.5" height="92"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Slouching Towards Bethlehem" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Bg-GI-EMJ">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Slouching Towards Bethlehem" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="1Bg-GI-EMJ">
                                                             <rect key="frame" x="18" y="15" width="251" height="24"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
                                                             <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Joan Didion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3D-a7-Idm">
-                                                            <rect key="frame" x="18" y="41" width="121" height="21"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joan Didion" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="i3D-a7-Idm">
+                                                            <rect key="frame" x="18" y="41" width="304" height="23"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
                                                             <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="1Bg-GI-EMJ" firstAttribute="height" secondItem="nE1-gE-mBB" secondAttribute="height" multiplier="0.27" id="BHZ-oh-zkj"/>
+                                                        <constraint firstItem="i3D-a7-Idm" firstAttribute="width" secondItem="nE1-gE-mBB" secondAttribute="width" multiplier="0.9" id="Vei-jw-o9V"/>
+                                                        <constraint firstItem="i3D-a7-Idm" firstAttribute="leading" secondItem="1Bg-GI-EMJ" secondAttribute="leading" id="WIp-7Y-849"/>
+                                                        <constraint firstItem="1Bg-GI-EMJ" firstAttribute="width" secondItem="nE1-gE-mBB" secondAttribute="width" multiplier="0.9" id="fap-Th-aNi"/>
+                                                        <constraint firstItem="1Bg-GI-EMJ" firstAttribute="top" secondItem="nE1-gE-mBB" secondAttribute="top" constant="15" id="hE9-v6-9W4"/>
+                                                        <constraint firstItem="1Bg-GI-EMJ" firstAttribute="leading" secondItem="nE1-gE-mBB" secondAttribute="leading" constant="18" id="t3s-8x-ONF"/>
+                                                        <constraint firstItem="i3D-a7-Idm" firstAttribute="height" secondItem="nE1-gE-mBB" secondAttribute="height" multiplier="0.25" id="vaS-J2-i6Y"/>
+                                                        <constraint firstItem="i3D-a7-Idm" firstAttribute="top" secondItem="1Bg-GI-EMJ" secondAttribute="bottom" constant="2" id="w6T-My-O0Q"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
                                             <color key="backgroundColor" red="0.98814910650253296" green="0.98829048871994019" blue="0.98811811208724976" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="nE1-gE-mBB" firstAttribute="height" secondItem="U1G-ir-Kdh" secondAttribute="height" multiplier="0.8" id="BgZ-B7-gO9"/>
+                                                <constraint firstItem="nE1-gE-mBB" firstAttribute="centerX" secondItem="U1G-ir-Kdh" secondAttribute="centerX" id="IU6-Wn-8dq"/>
+                                                <constraint firstItem="nE1-gE-mBB" firstAttribute="width" secondItem="U1G-ir-Kdh" secondAttribute="width" multiplier="0.9" id="Mx0-xN-glD"/>
+                                                <constraint firstItem="nE1-gE-mBB" firstAttribute="centerY" secondItem="U1G-ir-Kdh" secondAttribute="centerY" id="OZO-04-huy"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.98814910649999999" green="0.98829048870000002" blue="0.9881181121" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
@@ -109,31 +122,10 @@
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="41j-8i-bSe">
                                 <rect key="frame" x="16" y="121.5" width="94" height="1.5"/>
-                                <color key="backgroundColor" red="0.98814910650253296" green="0.98829048871994019" blue="0.98811811208724976" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AGj-fl-2R0">
-                                <rect key="frame" x="295" y="85" width="48" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Search"/>
-                                <connections>
-                                    <action selector="searchPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3xY-pE-yN3"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lGm-rx-owf">
-                                <rect key="frame" x="198" y="84" width="66" height="33"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.14192884059999999" green="0.55723893879999997" blue="0.62632935209999996" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Filter">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="filterTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sRF-96-SnT"/>
-                                    <segue destination="BlV-SZ-UiO" kind="presentation" identifier="showFilterVC" id="eeD-fH-6ix"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Swipe to delete or edit your book" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qEf-BG-F5g">
-                                <rect key="frame" x="65" y="135" width="278" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe to delete or edit your book" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qEf-BG-F5g">
+                                <rect key="frame" x="18.5" y="139" width="337.5" height="21"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="highlightedColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -142,8 +134,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="41j-8i-bSe" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.25" id="07b-eV-aHs"/>
+                            <constraint firstItem="qEf-BG-F5g" firstAttribute="centerX" secondItem="f0H-fU-rgz" secondAttribute="centerX" id="AR9-iz-55u"/>
                             <constraint firstItem="UBg-78-Aba" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.25" id="Ag3-eX-kFj"/>
+                            <constraint firstItem="qEf-BG-F5g" firstAttribute="height" secondItem="f0H-fU-rgz" secondAttribute="height" multiplier="0.04" id="EPP-ab-VXz"/>
                             <constraint firstItem="f0H-fU-rgz" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Hbx-Xi-qm4"/>
+                            <constraint firstItem="f0H-fU-rgz" firstAttribute="top" secondItem="qEf-BG-F5g" secondAttribute="bottom" constant="-37" id="LHl-W6-Plf"/>
                             <constraint firstItem="f0H-fU-rgz" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.8" id="QAI-1U-hob"/>
                             <constraint firstItem="41j-8i-bSe" firstAttribute="leading" secondItem="UBg-78-Aba" secondAttribute="leading" id="SOv-O5-kAy"/>
                             <constraint firstItem="f0H-fU-rgz" firstAttribute="top" secondItem="41j-8i-bSe" secondAttribute="bottom" id="Ta6-Nf-X5o"/>
@@ -152,6 +147,7 @@
                             <constraint firstAttribute="leadingMargin" secondItem="UBg-78-Aba" secondAttribute="leading" id="c8L-5E-g3G"/>
                             <constraint firstItem="UBg-78-Aba" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="dSw-KM-Gih"/>
                             <constraint firstItem="41j-8i-bSe" firstAttribute="top" secondItem="UBg-78-Aba" secondAttribute="bottom" constant="3" id="gaE-3d-AWL"/>
+                            <constraint firstItem="qEf-BG-F5g" firstAttribute="width" secondItem="f0H-fU-rgz" secondAttribute="width" multiplier="0.9" id="kd2-te-ArU"/>
                             <constraint firstItem="f0H-fU-rgz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="m6g-je-M3d"/>
                         </constraints>
                     </view>
